--- a/index.css
+++ b/index.css
@@ -143,7 +143,10 @@ body {
     /* https://stackoverflow.com/a/63791417/9044183 evil css trig hack to get gradients to loop properly */
     --d: 100vh;
     --angle: -45deg;
-    background: repeating-linear-gradient(var(--angle) in oklab, #27E1D9, #26AEE0,#2673E0,  #2E50E6, #4A32E6, #8632E6, #C232E6, #E62EBE, #C232E6, #8632E6, #4A32E6, #2E50E6,#2673E0,  #26AEE0, #27E1D9 var(--d));
+    background: repeating-linear-gradient(var(--angle) in oklab,
+        #27E1D9, #26AEE0, #2673E0, #2E50E6, #4A32E6, #8632E6, #C232E6, #E62EBE,
+        #C232E6, #8632E6, #4A32E6, #2E50E6, #2673E0, #26AEE0, #27E1D9
+        var(--d));
     background-size: calc(-1 * /*remove that -1 if angle goes positive*/(var(--d) / sin(var(--angle)))) 100%;
     animation: gradient 5s linear infinite;
 
@@ -204,6 +207,7 @@ body {
         /*background-repeat: no-repeat;*/
         /*background-attachment: fixed;*/
     }
+
     .bg {
         background: transparent !important;
     }
@@ -221,6 +225,7 @@ body {
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
+
     /*THIS SHIT IS SUPER LAGGY*/
     /*.glass {*/
     /*    background-image: url("assets/bg_blur.png");*/
