--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,7 +15,7 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="{{ description }}"/>
-    <link rel="icon" href="/assets/moam_just_logo.svg">
+    <link rel="icon" href="/assets/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="/libs/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/index.css"/>
@@ -41,6 +41,9 @@
     {%- endif -%}
 </head>
 <body>
+{%- if page.prepend -%}
+{{ page.prepend }}
+{%- endif -%}
 <div class="header">
     <a class="afix" href="{%- if layout.post -%} /blog {%- else -%} / {%- endif -%}">
         {%- comment -%}
