--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -40,7 +40,7 @@
         <link rel="stylesheet" type="text/css" href="/childpages.css"/>
     {%- endif -%}
 </head>
-<body>
+<body class="bg">
 {%- if page.prepend -%}
 {{ page.prepend }}
 {%- endif -%}
@@ -58,7 +58,7 @@
     </a>
 </div>
 <div class="safari-bg"></div>
-<div class="container-fluid bg">
+<div class="container-fluid ">
     {{ content }}
 </div>
 
