me want new font :)

--- a/assets/fonts/AtkinsonHyperlegible/atkinsonhyperlegible.css
+++ b/assets/fonts/AtkinsonHyperlegible/atkinsonhyperlegible.css
@@ -1,3 +1,4 @@
+/* this isnt used anymore, but im leaving it in case clients cache the old css and get confused */
 /* thanks chatgpt */
 @font-face {
     font-family: 'Atkinson Hyperlegible';
