--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@
     {%- assign title = title | append: " - Machine on a Mission" -%}
 {%- endif -%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8"/>
     <title>{{ title }}</title>
