--- a/index.css
+++ b/index.css
@@ -355,3 +355,23 @@ html, body {
         display: none;
     }
 }
+
+#scroll-popup {
+    position: absolute;
+    bottom: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .5em;
+    animation: scroll-popup 1.5s ease-out 1;
+}
+
+@keyframes scroll-popup {
+    0% {
+        bottom: -2em;
+        opacity: 0;
+    }
+    100% {
+        bottom: 1em;
+        opacity: 1;
+    }
+}
