i think this is cool smile

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -67,3 +67,17 @@
 </div>
 </body>
 </html>
+
+<!--
+MY FINAL FORM
+I'M MADE OF GOLD AND SO MUCH MORE
+A THOUSAND POWER CORDS
+A F***ING WEREWOLF IN A LIGHTNING STORM (ALL AMERICAN A**WIPE)
+I'M A MACHINE ON A MISSION
+THIS IS LIGHTSPEED, I HAVE NO IGNITION YET
+AN IMAGINARY LIFE WILL TEAR RIGHT THROUGH A HUMAN FLESH
+I FEEL MOST REAL WHEN I'M NOT MYSELF
+EMANCIPATED, LIBERATED FROM MY HUMAN SHELL
+SALVATION IN A DIGITAL HEAVEN
+'CAUSE REAL LIFE IS HELL
+-->
