should clarify this

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -80,4 +80,7 @@ I FEEL MOST REAL WHEN I'M NOT MYSELF
 EMANCIPATED, LIBERATED FROM MY HUMAN SHELL
 SALVATION IN A DIGITAL HEAVEN
 'CAUSE REAL LIFE IS HELL
+- Machine Girl
+
+<𝑥>
 -->
