--- a/index.css
+++ b/index.css
@@ -193,11 +193,8 @@ body {
 
 @supports (-webkit-touch-callout: inherit) or (not (background-attachment: fixed)) {
     .safari-bg {
-        background-image: url("assets/newbg.png");
+        background-image: url("assets/newbgdark.png");
         image-rendering: pixelated;
-
-        background-color: rgb(0 0 0 / 50%);
-        background-blend-mode: darken;
         /*evil hack to get it to be fixed on safari ios*/
         position: fixed;
         top: 0;
@@ -228,11 +225,8 @@ body {
     }
 
     .bg {
-        background-image: url("assets/newbg.png");
+        background-image: url("assets/newbgdark.png");
         image-rendering: pixelated;
-
-        background-color: rgb(0 0 0 / 50%);
-        background-blend-mode: darken;
         /*doesnt work on safari ios*/
         background-size: cover;
         background-repeat: no-repeat;
