--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" type="text/css" href="/libs/ahl/ahlpatch.css"/>
 
     <link rel="stylesheet" type="text/css" href="/libs/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/codehighlight.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
 
     <meta property="og:title" content="{{ title }}"/>
     <meta property="og:description" content="{{ description }}"/>
@@ -36,7 +37,7 @@
     {{ page.head }}
 
     {%- if layout.child or page.child -%}
-        <link rel="stylesheet" type="text/css" href="/childpages.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/childpages.css"/>
     {%- endif -%}
 </head>
 <body class="bg">
