--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,7 +15,7 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="{{ description }}"/>
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="icon" href="/assets/logo_v2/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="/libs/ahl/ahlpatch.css"/>
 
@@ -25,12 +25,12 @@
 
     <meta property="og:title" content="{{ title }}"/>
     <meta property="og:description" content="{{ description }}"/>
-    <meta property="og:image" content="https://machineonamission.me/assets/moam_just_logo.png"/>
+    <meta property="og:image" content="https://machineonamission.me/assets/logo_v2/MOAM LOGO NEW CROPPED.png"/>
     <meta content="#ffffff" data-react-helmet="true" name="theme-color"/>
 
     <meta name="twitter:title" content="{{ title }}"/>
     <meta name="twitter:description" content="{{ description }}"/>
-    <meta name="twitter:image" content="https://machineonamission.me/assets/moam_just_logo.png"/>
+    <meta name="twitter:image" content="https://machineonamission.me/assets/logo_v2/MOAM LOGO NEW CROPPED.png"/>
 
     <meta name="darkreader-lock">
 
@@ -50,10 +50,10 @@
         Jekyll doesn't support "inheritance" of variables from one layout to the other, so this evil hack is the best solution...
         {%- endcomment -%}
         {%- if layout.child or page.child -%}
-            <img class="headerimg" src="/assets/moam_just_logo.svg" alt="Machine on a Mission">
+            <img class="headerimg" src="/assets/logo_v2/MOAM LOGO NEW CROPPED.svg" alt="Machine on a Mission">
             <h3>{%- if layout.post -%} MelBlog {%- else -%} {{ page.title }} {%- endif -%}</h3>
         {%- else -%}
-            <img class="headerimg" src="/assets/moam.svg" alt="Machine on a Mission">
+            <img class="headerimg" src="/assets/logo_v2/MOAM LOGO TEXT HORIZONTAL.svg" alt="Machine on a Mission">
         {%- endif -%}
     </a>
 </div>
