--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,10 @@ layout: child
 post: true
 ---
 
-<h1 class="mb-0 fw-bold text-center">{{ page.title }}</h1>
-<h5 class="text-muted mb-4 text-center">{{ page.date | date_to_long_string }}</h5>
-<div class="text-start">
-    {{ content }}
+<div id="blogbody">
+    <h1 class="mb-0 fw-bold text-center">{{ page.title }}</h1>
+    <h5 class="text-muted mb-4 text-center">{{ page.date | date_to_long_string }}</h5>
+    <div class="text-start">
+        {{ content }}
+    </div>
 </div>
