--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ post: true
 ---
 
 <div id="blogbody">
-    <h1 class="mb-0 fw-bold text-center">{{ page.title }}</h1>
+    <h1 class="mb-0 fw-bold text-center moamsans">{{ page.title }}</h1>
     <h5 class="text-muted mb-4 text-center">{{ page.date | date_to_long_string }}</h5>
     <div class="text-start">
         {{ content }}
